<resources>
    <string name="app_name">UserInputData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_the_user">Add the User Information</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="data">Data</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>