<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddinguserFragment">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/liea0"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageUser"
                android:layout_marginTop="15dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:background="@drawable/round_shape"
                android:src="@drawable/ic_camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_margin="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textStyle="bold|normal"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:id="@+id/etName"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:layout_margin="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:textStyle="bold|normal"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:id="@+id/etMb"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:layout_margin="15dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:textStyle="bold|normal"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:id="@+id/etData"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/submit"
                    android:text="@string/submit"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>



    </RelativeLayout>



</layout>